--- a/package.json
+++ b/package.json
@@ -1,25 +1,29 @@
 {
   "name": "vtex-tachyons",
   "version": "1.0.2",
-  "description": "This project is an **extension** of [tachyons](https://github.com/tachyons-css/tachyons). Files in `src/` add or redefine classes in `tachyons`, and the final built files bundle the original `tachyons`.",
+  "description": "This project is an **extension** of [tachyons](https://github.com/tachyons-css/tachyons) and a fork from [vtex-tachyons](https://github.com/vtex/vtex-tachyons). Files in `src/` add or redefine classes in `tachyons`, and the final built files bundle the original `tachyons`.",
   "main": "tachyons.css",
   "scripts": {
     "prepublishOnly": "node index.js"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/vtex/vtex-tachyons.git"
+    "url": "git+https://github.com/vtex-gocommerce/tachyons-ui.git"
   },
   "keywords": [
     "vtex",
+    "gocommerce",
     "tachyons"
   ],
   "author": "Breno Calazans (@klzs)",
+  "contributors": [
+    "João Gonçalves <joao.goncalves@vtex.com.br>"
+  ],
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/vtex/vtex-tachyons/issues"
+    "url": "https://github.com/vtex-gocommerce/tachyons-ui/issues"
   },
-  "homepage": "https://github.com/vtex/vtex-tachyons#readme",
+  "homepage": "https://github.com/vtex-gocommerce/tachyons-ui#readme",
   "devDependencies": {
     "tachyons-generator": "git+https://github.com/vtex/tachyons-generator.git#v0.19.2-vtex"
   }
