--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@gocommerce/tachyons",
-  "version": "1.0.2-gc",
+  "version": "1.0.2-gc1",
   "description": "This project is a fork from [vtex-tachyons](https://github.com/vtex/vtex-tachyons).",
   "main": "tachyons.css",
   "scripts": {
