--- a/config.json
+++ b/config.json
@@ -42,7 +42,9 @@
     "red": "#ff8080",
     "washed-red": "#fff2f2",
     "yellow": "#ffb100",
-    "washed-yellow": "#fffbf2"
+    "washed-yellow": "#fffbf2",
+
+    "transparent": "rgba(0,0,0,0)"
   },
   "borderWidths": [0, 0.125, 0.25, 0.5, 1, 2],
   "borderRadius": [0, 0.125, 0.25, 0.5, 1],
