Add new smaller height and width

--- a/config.json
+++ b/config.json
@@ -47,9 +47,9 @@
   },
   "borderWidths": [0, 0.125, 0.25, 0.5, 1, 2],
   "borderRadius": [0, 0.125, 0.25, 0.5, 1],
-  "widths": [1, 2, 4, 8, 16],
+  "widths": [0.5, 1, 2, 4, 8, 16],
   "maxWidths": [1, 2, 4, 8, 16, 32, 48, 64, 96],
-  "heights": [1, 2, 4, 8, 16],
+  "heights": [0.5, 1, 2, 4, 8, 16],
   "typography": {
     "measure": [30, 34, 20]
   },
