--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-  "typeScale": [3, 2.25, 1.5, 1.25, 1, 0.875, 0.75],
-  "spacing": [0.25, 0.5, 0.75, 1, 1.25, 1.5, 2, 3, 4, 8, 16],
+  "typeScale": [3, 2.25, 1.5, 1.25, 1.125, 1, 0.875, 0.75],
+  "spacing": [0.25, 0.5, 0.75, 1, 1.25, 1.5, 1.75, 2, 3, 4, 8, 16],
   "customMedia": [
     { "s": 20 },
     {
@@ -47,9 +47,9 @@
   },
   "borderWidths": [0, 0.125, 0.25, 0.5, 1, 2],
   "borderRadius": [0, 0.125, 0.25, 0.5, 1],
-  "widths": [0.5, 1, 2, 4, 8, 16],
-  "maxWidths": [1, 2, 4, 8, 16, 32, 48, 64, 96],
-  "heights": [0.5, 1, 2, 4, 8, 16],
+  "widths": [0.5, 1, 2, 2.5, 4, 4.5, 8, 16],
+  "maxWidths": [0.5, 1, 2, 4, 4.5, 8, 16, 32, 48, 64, 96],
+  "heights": [0.5, 1, 2, 2.5, 4, 4.5, 8, 16],
   "typography": {
     "measure": [30, 34, 20]
   },
