--- a/config.json
+++ b/config.json
@@ -2,25 +2,25 @@
   "customMedia": [{ "xs": 36 }, { "s": 48 }, { "m": 62 }, { "l": 75 }, { "xl": 100 }],
   "colors": {
     "blue": "#4B71FC",
-    "blue-80": "#708FFF",
-    "blue-60": "#91A9FF",
-    "blue-40": "#BDCCFF",
-    "blue-20": "#EAEFFF",
+    "blue-80": "#6F8DFD",
+    "blue-60": "#93AAFD",
+    "blue-40": "#B7C6FE",
+    "blue-20": "#DBE3FE",
 
-    "navy": "#212E5F",
-    "navy-80": "#7B83A1",
-    "navy-60": "#9FA6BF",
-    "navy-40": "#D7DBE7",
-    "navy-20": "#EFF1F9",
+    "navy": "#545A70",
+    "navy-80": "#767B8D",
+    "navy-60": "#989CA9",
+    "navy-40": "#BBBDC6",
+    "navy-20": "#DDDEE2",
 
-    "green": "#39B54A",
-    "green-light": "#E6FFEA",
+    "green": "#7ED321",
+    "green-light": "#F8FDF4",
 
     "yellow": "#FFA721",
-    "yellow-light": "#FFF7E4",
+    "yellow-light": "#FFFAF4",
 
     "red": "#FF3D44",
-    "red-light": "#FFE8E8",
+    "red-light": "#FFF5F5",
 
     "black": "#000000",
     "white": "#ffffff",
