--- a/config.json
+++ b/config.json
@@ -19,6 +19,7 @@
     "on-base-2":"#7B83A1", 
     "on-base-inverted-1":"#FFFFFF",
     "on-base-inverted-2":"#FFFFFF",
+    "on-primary":"#FFFFFF",
  
     "blue": "#4B71FC",
     "blue-80": "#6F8DFD",
