--- a/config.json
+++ b/config.json
@@ -8,43 +8,34 @@
     "base-4":"#D7DBE7", 
     "base-inverted-1":"#545A70",
     "base-inverted-2":"#6D7285", 
+
     "primary":"#4B71FC",
+    "dark-primary":"#3D5CCE",
+    "active-primary":"#2B4191",
+    "secondary":"942227",
+    "dark-secondary":"#363A48",
+    "active-secondary":"#363A48",
     "success":"#7ED321",
     "light-success":"#F8FDF4",
     "danger":"#FF3D44",
+    "dark-danger":"#D03238",
+    "active-danger":"#942227",
     "light-danger":"#FFF5F5",
     "warning":"#FFA721",
     "light-warning":"#FFFAF4",
+    "outline":"#FFFFFF",
+    "dark-outline":"#F0F1F4",
+    "active-outline":"#E7E9F0",
+
     "on-base-1":"#212E5F", 
     "on-base-2":"#7B83A1", 
     "on-base-inverted-1":"#FFFFFF",
     "on-base-inverted-2":"#FFFFFF",
     "on-primary":"#FFFFFF",
+    "on-secondary":"#FFFFFF",
     "on-danger":"#FFFFFF",
     "on-success":"#FFFFFF",
- 
-    "blue": "#4B71FC",
-    "blue-80": "#6F8DFD",
-    "blue-60": "#93AAFD",
-    "blue-40": "#B7C6FE",
-    "blue-20": "#DBE3FE",
-
-    "dark-blue": "#212E5F",
-
-    "navy": "#545A70",
-    "navy-80": "#767B8D",
-    "navy-60": "#989CA9",
-    "navy-40": "#BBBDC6",
-    "navy-20": "#F9FAFC",
-
-    "green": "#7ED321",
-    "green-light": "#F8FDF4",
-
-    "yellow": "#FFA721",
-    "yellow-light": "#FFFAF4",
-
-    "red": "#FF3D44",
-    "red-light": "#FFF5F5",
+    "on-outline":"#212E5F",
 
     "black": "#000000",
     "white": "#ffffff",
