Fix secondary color

--- a/config.json
+++ b/config.json
@@ -12,7 +12,7 @@
     "primary":"#4B71FC",
     "dark-primary":"#3D5CCE",
     "active-primary":"#2B4191",
-    "secondary":"942227",
+    "secondary":"#942227",
     "dark-secondary":"#363A48",
     "active-secondary":"#363A48",
     "success":"#7ED321",
