Fix secondary colors

--- a/config.json
+++ b/config.json
@@ -12,9 +12,9 @@
     "primary":"#4B71FC",
     "dark-primary":"#3D5CCE",
     "active-primary":"#2B4191",
-    "secondary":"#942227",
+    "secondary":"#545A70",
     "dark-secondary":"#363A48",
-    "active-secondary":"#363A48",
+    "active-secondary":"#15161C",
     "success":"#7ED321",
     "light-success":"#F8FDF4",
     "danger":"#FF3D44",
