--- a/config.json
+++ b/config.json
@@ -16,6 +16,7 @@
     "dark-secondary":"#363A48",
     "active-secondary":"#15161C",
     "info":"#4B71FC",
+    "light-info":"#F0F1F4",
     "success":"#7ED321",
     "light-success":"#F8FDF4",
     "danger":"#FF3D44",
@@ -52,6 +53,7 @@
     "white-80": "rgba(255,255,255,.80)",
     "white-90": "rgba(255,255,255,.90)",
     "transparent": "transparent"
+    
   },
   "spacing": [0.25, 0.5, 0.75, 1, 1.25, 1.5, 1.75, 2, 2.25, 2.5, 3, 4, 5, 8, 16],
   "typeScale": [0.75, 0.875, 1, 1.25, 1.5, 2, 2.25, 2.5, 5],
