Alter base-inverted-2-25 to base-inverted-5

--- a/config.json
+++ b/config.json
@@ -23,9 +23,9 @@
     "base-4": "#E1E4E7",
     "base-inverted-1": "#14282E",
     "base-inverted-2": "#7F8494",
-    "base-inverted-2-25": "rgba(127, 132, 148,.25)",
     "base-inverted-3": "#A9ACB7",
     "base-inverted-4": "#F6F7F8",
+    "base-inverted-5": "#2E3E47",
     "primary-light": "#F6FCFE",
     "primary": "#3DA3C3",
     "primary-dark": "#2E7A92",
