--- a/config.json
+++ b/config.json
@@ -52,6 +52,15 @@
     "on-base": "#14282E",
     "black": "#000000",
     "white": "#ffffff",
+    "danger-light-10": "rgba(0,0,0,.10)",
+    "danger-light-20": "rgba(0,0,0,.20)",
+    "danger-light-30": "rgba(0,0,0,.30)",
+    "danger-light-40": "rgba(0,0,0,.40)",
+    "danger-light-50": "rgba(0,0,0,.50)",
+    "danger-light-60": "rgba(0,0,0,.60)",
+    "danger-light-70": "rgba(0,0,0,.70)",
+    "danger-light-80": "rgba(0,0,0,.80)",
+    "danger-light-90": "rgba(0,0,0,.90)",
     "black-20": "rgba(0,0,0,.20)",
     "black-40": "rgba(0,0,0,.40)",
     "black-60": "rgba(0,0,0,.60)",
@@ -64,112 +73,15 @@
     "white-90": "rgba(255,255,255,.90)",
     "transparent": "transparent"
   },
-  "spacing": [
-    0.25,
-    0.5,
-    0.75,
-    1,
-    1.25,
-    1.5,
-    1.75,
-    2,
-    2.25,
-    2.5,
-    3,
-    4,
-    5,
-    8,
-    16
-  ],
-  "typeScale": [
-    0.75,
-    0.875,
-    1,
-    1.25,
-    1.5,
-    2,
-    2.25,
-    2.5,
-    5
-  ],
-  "widths": [
-    0.25,
-    0.5,
-    0.75,
-    1,
-    1.25,
-    1.5,
-    1.75,
-    2,
-    2.25,
-    2.5,
-    3,
-    4,
-    5,
-    8,
-    16
-  ],
-  "maxWidths": [
-    1,
-    2,
-    4,
-    8,
-    16,
-    32,
-    48,
-    64,
-    96
-  ],
-  "heights": [
-    0.25,
-    0.5,
-    0.75,
-    1,
-    1.25,
-    1.5,
-    1.75,
-    2,
-    2.25,
-    2.5,
-    3,
-    4,
-    5,
-    8,
-    16
-  ],
-  "borderRadius": [
-    0,
-    0.125,
-    0.25,
-    0.5,
-    1
-  ],
-  "borderWidths": [
-    0,
-    0.125,
-    0.25,
-    0.5,
-    1
-  ],
+  "spacing": [0.25, 0.5, 0.75, 1, 1.25, 1.5, 1.75, 2, 2.25, 2.5, 3, 4, 5, 8, 16],
+  "typeScale": [0.75, 0.875, 1, 1.25, 1.5, 2, 2.25, 2.5, 5],
+  "widths": [0.25, 0.5, 0.75, 1, 1.25, 1.5, 1.75, 2, 2.25, 2.5, 3, 4, 5, 8, 16],
+  "maxWidths": [1, 2, 4, 8, 16, 32, 48, 64, 96],
+  "heights": [0.25, 0.5, 0.75, 1, 1.25, 1.5, 1.75, 2, 2.25, 2.5, 3, 4, 5, 8, 16],
+  "borderRadius": [0, 0.125, 0.25, 0.5, 1],
+  "borderWidths": [0, 0.125, 0.25, 0.5, 1],
   "typography": {
-    "measure": [
-      20,
-      30,
-      34
-    ]
+    "measure": [20, 30, 34]
   },
-  "opacity": [
-    1,
-    0.9,
-    0.8,
-    0.7,
-    0.6,
-    0.5,
-    0.4,
-    0.3,
-    0.2,
-    0.1,
-    0.05,
-    0
-  ]
+  "opacity": [1, 0.9, 0.8, 0.7, 0.6, 0.5, 0.4, 0.3, 0.2, 0.1, 0.05, 0]
 }
