Add Breaking point -ns

--- a/config.json
+++ b/config.json
@@ -7,6 +7,12 @@
       "s": 48
     },
     {
+      "ns": {
+        "value": 40,
+        "minWidth": true
+      }
+    },
+    {
       "m": 62
     },
     {
