New colors of brand

--- a/config.json
+++ b/config.json
@@ -33,23 +33,23 @@
     "base-2": "#F9FAFC",
     "base-3": "#EDEFF2",
     "base-4": "#E1E4E7",
-    "base-inverted-1": "#14282E",
+    "base-inverted-1": "#142032",
     "base-inverted-2": "#7F8494",
     "base-inverted-3": "#A9ACB7",
     "base-inverted-4": "#F6F7F8",
     "base-inverted-5": "#2E3E47",
-    "primary-light": "#F6FCFE",
-    "primary": "#3DA3C3",
-    "primary-dark": "#2E7A92",
-    "primary-bold": "#14282E",
-    "success-light": "#F7FCF8",
-    "success": "#5FCE77",
-    "success-dark": "#479B59",
-    "success-bold": "#30673C",
-    "danger-light": "#FEF3F5",
-    "danger": "#F71940",
-    "danger-dark": "#B91330",
-    "danger-bold": "#7C0D20",
+    "primary-light": "#f8f8ff",
+    "primary": "#7680ff",
+    "primary-dark": "#5e66cc",
+    "primary-bold": "#474d99",
+    "success-light": "#f6fcf7",
+    "success": "#55c469",
+    "success-dark": "#449d54",
+    "success-bold": "#33763f",
+    "danger-light": "#fef3f5",
+    "danger": "#f71940",
+    "danger-dark": "#b91330",
+    "danger-bold": "#7c0d20",
     "warning-light": "#FFFBF6",
     "warning": "#FFBA57",
     "warning-dark": "#BF8C41",
