Update colors by brand

--- a/config.json
+++ b/config.json
@@ -33,35 +33,35 @@
     "base-2": "#F9FAFC",
     "base-3": "#EDEFF2",
     "base-4": "#E1E4E7",
-    "base-inverted-1": "#142032",
-    "base-inverted-2": "#7F8494",
-    "base-inverted-3": "#A9ACB7",
+    "base-inverted-1": "#192621",
+    "base-inverted-2": "#a3a8a6",
+    "base-inverted-3": "#d1d4d3",
     "base-inverted-4": "#F6F7F8",
-    "base-inverted-5": "#2E3E47",
-    "primary-light": "#f8f8ff",
-    "primary": "#7680ff",
-    "primary-dark": "#5e66cc",
-    "primary-bold": "#474d99",
+    "base-inverted-5": "#323D3D",
+    "primary-light": "#f6fcf7",
+    "primary": "#4eae8e",
+    "primary-dark": "#429479",
+    "primary-bold": "#377a63",
     "success-light": "#f6fcf7",
-    "success": "#55c469",
-    "success-dark": "#449d54",
-    "success-bold": "#33763f",
-    "danger-light": "#fef3f5",
-    "danger": "#f71940",
-    "danger-dark": "#b91330",
-    "danger-bold": "#7c0d20",
-    "warning-light": "#FFFBF6",
-    "warning": "#FFBA57",
-    "warning-dark": "#BF8C41",
-    "warning-bold": "#805D2C",
+    "success": "#4eae8e",
+    "success-dark": "#429479",
+    "success-bold": "#377a63",
+    "danger-light": "#fdf6f5",
+    "danger": "#e54c3c",
+    "danger-dark": "#b73d30",
+    "danger-bold": "#953127",
+    "warning-light": "#fefbf2",
+    "warning": "#f8be00",
+    "warning-dark": "#dfab00",
+    "warning-bold": "#c69800",
     "on-primary": "#FFFFFF",
     "on-success": "#FFFFFF",
     "on-danger": "#FFFFFF",
     "on-warning": "#FFFFFF",
     "on-inverted": "#FFFFFF",
-    "on-base-3": "#ccd1d6",
-    "on-base-2": "#a1a6ad",
-    "on-base": "#142032",
+    "on-base-3": "#d1d4d3",
+    "on-base-2": "#a3a8a6",
+    "on-base": "#192621",
     "black": "#000000",
     "white": "#ffffff",
     "danger-light-10": "rgba(254,243,245,.10)",
@@ -85,115 +85,15 @@
     "white-90": "rgba(255,255,255,.90)",
     "transparent": "transparent"
   },
-  "spacing": [
-    0.25,
-    0.5,
-    0.75,
-    1,
-    1.25,
-    1.5,
-    1.75,
-    2,
-    2.25,
-    2.5,
-    3,
-    4,
-    5,
-    8,
-    13.75,
-    16
-  ],
-  "typeScale": [
-    0.75,
-    0.875,
-    1,
-    1.25,
-    1.5,
-    2,
-    2.25,
-    2.5,
-    5
-  ],
-  "widths": [
-    0.25,
-    0.5,
-    0.75,
-    1,
-    1.25,
-    1.5,
-    1.75,
-    2,
-    2.25,
-    2.5,
-    3,
-    4,
-    5,
-    8,
-    13.75,
-    16
-  ],
-  "maxWidths": [
-    1,
-    2,
-    4,
-    8,
-    16,
-    32,
-    48,
-    64,
-    96
-  ],
-  "heights": [
-    0.25,
-    0.5,
-    0.75,
-    1,
-    1.25,
-    1.5,
-    1.75,
-    2,
-    2.25,
-    2.5,
-    3,
-    4,
-    5,
-    8,
-    13.75,
-    16
-  ],
-  "borderRadius": [
-    0,
-    0.125,
-    0.25,
-    0.5,
-    1
-  ],
-  "borderWidths": [
-    0,
-    0.125,
-    0.25,
-    0.5,
-    1
-  ],
+  "spacing": [0.25, 0.5, 0.75, 1, 1.25, 1.5, 1.75, 2, 2.25, 2.5, 3, 4, 5, 8, 13.75, 16],
+  "typeScale": [0.75, 0.875, 1, 1.25, 1.5, 2, 2.25, 2.5, 5],
+  "widths": [0.25, 0.5, 0.75, 1, 1.25, 1.5, 1.75, 2, 2.25, 2.5, 3, 4, 5, 8, 13.75, 16],
+  "maxWidths": [1, 2, 4, 8, 16, 32, 48, 64, 96],
+  "heights": [0.25, 0.5, 0.75, 1, 1.25, 1.5, 1.75, 2, 2.25, 2.5, 3, 4, 5, 8, 13.75, 16],
+  "borderRadius": [0, 0.125, 0.25, 0.5, 1],
+  "borderWidths": [0, 0.125, 0.25, 0.5, 1],
   "typography": {
-    "measure": [
-      20,
-      30,
-      34
-    ]
+    "measure": [20, 30, 34]
   },
-  "opacity": [
-    1,
-    0.9,
-    0.8,
-    0.7,
-    0.6,
-    0.5,
-    0.4,
-    0.3,
-    0.2,
-    0.1,
-    0.05,
-    0
-  ]
+  "opacity": [1, 0.9, 0.8, 0.7, 0.6, 0.5, 0.4, 0.3, 0.2, 0.1, 0.05, 0]
 }
