--- a/config.json
+++ b/config.json
@@ -88,7 +88,7 @@
   "spacing": [0.25, 0.5, 0.75, 1, 1.25, 1.5, 1.75, 2, 2.25, 2.5, 3, 4, 5, 8, 13.75, 16],
   "typeScale": [0.75, 0.875, 1, 1.25, 1.5, 2, 2.25, 2.5, 5],
   "widths": [0.25, 0.5, 0.75, 1, 1.25, 1.5, 1.75, 2, 2.25, 2.5, 3, 4, 5, 8, 13.75, 16],
-  "maxWidths": [1, 2, 4, 8, 16, 32, 48, 64, 96],
+  "maxWidths": [1, 2, 4, 8, 16, 32, 48, 64, 74.18, 96],
   "heights": [0.25, 0.5, 0.75, 1, 1.25, 1.5, 1.75, 2, 2.25, 2.5, 3, 4, 5, 8, 13.75, 16],
   "borderRadius": [0, 0.125, 0.25, 0.5, 1],
   "borderWidths": [0, 0.125, 0.25, 0.5, 1],
