--- a/config.json
+++ b/config.json
@@ -30,38 +30,44 @@
   ],
   "colors": {
     "base-1": "#FFFFFF",
-    "base-2": "#F9FAFC",
-    "base-3": "#EDEFF2",
-    "base-4": "#E1E4E7",
-    "base-inverted-1": "#192621",
-    "base-inverted-2": "#a3a8a6",
-    "base-inverted-3": "#d1d4d3",
-    "base-inverted-4": "#F6F7F8",
-    "base-inverted-5": "#323D3D",
-    "primary-light": "#f6fcf7",
-    "primary": "#4eae8e",
-    "primary-dark": "#429479",
-    "primary-bold": "#377a63",
-    "success-light": "#f6fcf7",
-    "success": "#4eae8e",
-    "success-dark": "#429479",
-    "success-bold": "#377a63",
-    "danger-light": "#fdf6f5",
-    "danger": "#e54c3c",
-    "danger-dark": "#b73d30",
-    "danger-bold": "#953127",
-    "warning-light": "#fefbf2",
-    "warning": "#f8be00",
-    "warning-dark": "#dfab00",
-    "warning-bold": "#c69800",
+    "base-2": "#F8F8F9",
+    "base-3": "#E8E9EB",
+    "base-4": "#D5D7DA",
+    "base-inverted-1": "#142032",
+    "base-inverted-2": "#A1A6AD",
+    "base-inverted-3": "#E8E9EB",
+    "base-inverted-4": "#F8F8F9",
+    "base-inverted-5": "#7F8494",
+    "primary-light": "#F6FAFD",
+    "primary": "#0093E9",
+    "primary-dark": "#0075C9",
+    "primary-bold": "#005AA7",
+    "success-light": "#F4FDF7",
+    "success": "#2CDD63",
+    "success-dark": "#24C456",
+    "success-bold": "#1CAA49",
+    "danger-light": "#FDF6F4",
+    "danger": "#DD4A2C",
+    "danger-dark": "#C43F24",
+    "danger-bold": "#AA341C",
+    "warning-light": "#FFFCF3",
+    "warning": "#FFC20E",
+    "warning-dark": "#D99D09",
+    "warning-bold": "#B37B06",
     "on-primary": "#FFFFFF",
     "on-success": "#FFFFFF",
     "on-danger": "#FFFFFF",
     "on-warning": "#FFFFFF",
     "on-inverted": "#FFFFFF",
-    "on-base-3": "#d1d4d3",
-    "on-base-2": "#a3a8a6",
-    "on-base": "#192621",
+    "on-base-3": "#D0D2D6",
+    "on-base-2": "#A1A6AD",
+    "on-base": "#142032",
+    "facebook": "#4167B2",
+    "facebook-dark": "#375A9E",
+    "facebook-bold": "#2E4C89",
+    "google": "#EA4335",
+    "google-dark": "#D0382C",
+    "google-bold": "#B42E23",
     "black": "#000000",
     "white": "#ffffff",
     "danger-light-10": "rgba(254,243,245,.10)",
